--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,44 @@ body {
   margin: 0;
   min-height: 100%;
 }
+
+main {
+  background-color: #f5dbfa;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
+  color: rgb(216, 88, 184);
+}
+
+table {
+  border-spacing: 0.01rem;
+}
+
+td {
+  border-radius: 0.5rem;
+  background-color: rgb(216, 95, 176);
+  padding: 1.2rem;
+  border-right: solid rgb(179, 74, 156) 0.25rem;
+  border-bottom: solid rgb(179, 74, 156) 0.25rem;
+  border-top: solid rgb(218, 129, 191) 0.25rem;
+  border-left: solid rgb(218, 129, 191) 0.25rem;
+}
+
+.reset {
+  width: 10%;
+  margin: 2rem;
+}
+
+#brooch {
+  float: left;
+  height: 80px;
+  padding-top: 15px;
+  display: ;
+}
